Fix slider spacing on mobile

--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ button:hover {
     }
     .slider {
         margin-top: 3rem;
+        margin-bottom: 3rem;
         max-width: 50vw;
     }
 }
